@@ -1,7 +1,7 @@
 #ifndef __FBUS_H__
 #define __FBUS_H__
 
-#include <stdlib/f_types.h>
+#include "../../Fastwel/fbus/stdlib/f_types.h"
 
 #if defined(_MSC_VER)
   #define FDLL_EXPORT __declspec(dllimport)
@@ -9,8 +9,8 @@
   #define FDLL_EXPORT
 #endif
 
-#include <fb_node.h>
-#include <fb_api.h>
-#include <fiom.h>
+#include "../../Fastwel/fbus/fb_node.h"
+#include "../../Fastwel/fbus/fb_api.h"
+#include "../../Fastwel/fbus/fiom.h"
 
 #endif  // __FBUS_H__
